--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
          <script src="js/script.js"></script>  
     </head>  
     <body>         
-        <h1>The Best Cod3z!</h1>   </body>
+        <h1>The Best Cod3z!</h1>   
+        <div id="message"></div>
+    </body>
 </html>”
